--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SpeedTest</title>
 </head>
 <body>
-    <h1>SpeedTest</h1>
-    <iframe src="https://www.speedtest.net" width="100%" height="600px" frameborder="0"></iframe>
+    <h1>SpeedTest 1</h1>
+    <iframe src="https://www.speedtest.net/run" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
