--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SpeedTest</title>
 </head>
 <body>
-    <h1>SpeedTest 1</h1>
+    <h1>SpeedTest</h1>
     <iframe src="https://workers-playground-gentle-snowflake-8a89.antonio-valle.workers.dev" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
